avformat/image2: allow muxing gif files.

Fixes Ticket #2936.